2004-04-17  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktoolbutton.xml Add.

	* pygtk-gtktoolitem.xml Add.

	* pygtk-gtktoolitem.xml (set_tooltip) tip_text and tip_private can
	default to None.

	* pygtk-gtkwindow.xml (tooltips_get_info_from_tip_window) Add 
	description of PyGTK 2.4 method.

	* pygtk-gtktreeiter.xml Add class info for TreeIter creation methods.

	* pygtk_gtktreemodel.xml (filter_new) Add description of new 
	PyGTK 2.4 method.

2004-04-16  John Finlay  <finlay@moeraki.com>

	* pygtk-gtksocket.xml ("plug-removed") Add return value description
	for this signal handler.

	* pygtk-gtkspinbutton.xml ("input") ("output") Add return value
	descriptions. Reorder property descriptions.

	* pygtk-gtkspinbutton.xml ("input") ("output") Fix typos.

	* pygtk-gtkstatusbar.xml ("has-resize-grip") Add GTK+ 2.4 property
	description.

	* pygtk-gtk-functions.xml (gtk.draw_insertion_cursor) Add.

	* pygtk-gtktable.xml (attach_defaults) Remove - it's deprecated.
	Reorder property descriptions.

	* pygtk-gtktextbuffer.xml (create_tag) Remove keyword role.
	(select_range) (add_selection_clipboard) (remove_selection_clipboard)
	(cut_clipboard) (copy_clipboard) (paste_clipboard) Add for PyGTK 2.4

	* pygtk-gtktextiter.xml (forward_visible_word_end)
	(backward_visible_word_start) (forward_visible_word_ends)
	(backward_visible_word_starts) Add descriptions for PyGTK 2.4

	* pygtk-gtktexttag.xml Reorder property descriptions.
	("event") Add return value description.

	* pygtk-gtktexttagtable.xml (foreach) Add description for PyGTK 2.4

	* pygtk-gtkaccelgroup.xml
	pygtk-gtkpaned.xml
	pygtk-gtkscrolledwindow.xml
	pygtk-gtkspinbutton.xml
	pygtk-gtktreeview.xml
	pygtk-gtkwidget.xml
	pygtk-gtkwindow.xml Make keycombos simultaneous.

	* pygtk-gtktextview.xml ("move-viewport") ("select-all") Add
	descriptions of these signals for GTK+ 2.4 and 2.2.
	("accepts-tab") ("overwrite") Add descriptions of these GTK+ 2.4
	properties.