@@ -1,3 +1,7 @@
+2004-04-18  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtktreemodelfilter.xml Add.
+
 2004-04-17  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktoolbutton.xml Add.
